@@ -1,3 +1,5 @@
+  * Render the appropriate sapling sprite 100% of the time
+
 Minecraft X-Ray 2.7 Maintenance Branch 12 (2011.04.19)
 
   * Minor improvements to OSX and Linux script launchers
